--- a/A27.md
+++ b/A27.md
@@ -12,7 +12,7 @@
 
 别笑话我。说实话，我也不怕被笑话 —— 据我的观察，每个人都有自己死活改不了的东西，不是这方面就是那方面。这辈子我就没见过任何一个有能力任意改变（改善）自己所有方面的人，也许是我见识太少？
 
-然而，我又是一个确实在很多方面改变、改善了自己的人 —— 也确实不是说出来的，而是真做出来的。方方面面罢：小时候的我超级浮躁，现在的我极度耐心；过去的我脾气暴躁，现在的我脾气好到朋友们知道我基本不发火所以常常故意气我玩儿；三十岁之前的我不说骨瘦如柴吧也确实相当瘦弱，三十岁之后的我生生在健身房里把自己练成了一个壮汉…… 虽然烟抽得越来越重，但好像也确实没妨碍我在其他方面真正改善自己。
+然而，我又是一个确实在很多方面改变、改善了自己的人 —— 也确实不是说出来的，而是真做出来的。方方面面罢：小时候的我超级浮躁，现在的我极度耐心；过去的我脾气暴躁，现在的我脾气好到朋友们知道我基本不发火所以常常故意气我玩儿；三十岁之前的我不说骨瘦如柴吧也确实相当瘦弱，三十岁之后的我生生在健身房里把自己练成了一个壮汉…… 虽然烟抽得越来越重，但好任溶溶像也确实没妨碍我在其他方面真正改善自己。
 
 改变，几乎是每个人的愿望。谁不想变得更好一点呢？谁不知道想变得更好一点需要努力呢？谁没有下过无数次决心呢？然并卵 —— 这个来自于“句子缩写”的词汇里包含着多少无奈？又包含着多少被别人用它耻笑时的痛苦？
 
